# deepagents-quickstarts

./: .gitignore  README.md
developer/: README.md
personal_assistant/: README.md  agent.py  langgraph.json  pyproject.toml  test.ipynb
personal_assistant/src/personal_assistant/: __init__.py  email_assistant_deepagents.py  prompts.py  utils.py
personal_assistant/src/personal_assistant/middleware/: email_assistant_hitl.py  email_genui.py  email_memory_injection.py  email_post_interrupt.py
personal_assistant/src/personal_assistant/tools/: __init__.py
personal_assistant/src/personal_assistant/tools/default/: __init__.py
personal_assistant/src/personal_assistant/tools/gmail/: gmail_tools.py  run_ingest.py  setup_gmail.py
